--- a/src/app/pill-details/pill-details.component.html
+++ b/src/app/pill-details/pill-details.component.html
@@ -212,7 +212,7 @@
           invoices[0].order_type === 'Delivery' &&
           isShow
         ">
-        <!-- <div class="d-flex gap-4">
+        <div class="d-flex gap-4">
           <button
             class="fs-6 rounded-4 w-50 btn"
             [ngClass]="{
@@ -228,7 +228,7 @@
             }" (click)="changePaymentStatus('paid')">
             مدفوعة
           </button>
-        </div>  -->
+        </div> 
 
         <!-- Show selected status -->
       </div>
@@ -339,8 +339,50 @@
             <span>{{ item.total_price }} {{ item.currency_symbol }}</span>
           </h6>
         </div>
-      </div>
 
+      </div>
+<!-- قسم التيبس -->
+        <div class="tips-section" *ngIf="invoiceTips.length > 0">
+          <hr />
+          <div *ngFor="let tip of invoiceTips" class="mb-3">
+            <div class="d-flex justify-content-between px-2 mb-1">
+              <h5 class="mb-0 fw-bold">
+                الدفع - {{ tip.payment_method === 'cash' ? 'كاش' : 'فيزا' }}
+              </h5>
+              <h6 class="fw-bold mb-0">
+                <span>{{ tip.payment_amount | number: '1.2-2' }} {{ item.currency_symbol || 'ج.م' }}</span>
+              </h6>
+            </div>
+
+            <div class="d-flex justify-content-between px-2 mb-1">
+              <h5 class="mb-0 fw-bold">
+                المبلغ الباقى للعميل
+              </h5>
+              <h6 class="fw-bold mb-0">
+                <span>{{ tip.returned_amount | number: '1.2-2' }} {{ item.currency_symbol || 'ج.م' }}</span>
+              </h6>
+            </div>
+
+            <div class="d-flex justify-content-between px-2 mb-1">
+              <h5 class="mb-0 fw-bold">
+                الاكرامية
+              </h5>
+              <h6 class="fw-bold mb-0">
+                <span>{{ tip.tip_amount | number: '1.2-2' }} {{ item.currency_symbol || 'ج.م' }}</span>
+              </h6>
+            </div>
+            <div class="d-flex justify-content-between px-2 mb-1">
+              <h5 class="mb-0 fw-bold">
+                المجموع مع الاكرامية
+              </h5>
+              <h6 class="fw-bold mb-0">
+                <span>{{ tip.total_with_tip | number: '1.2-2' }} {{ item.currency_symbol || 'ج.م' }}</span>
+              </h6>
+            </div>
+          </div>
+
+          <!-- dalia end -->
+        </div>
       <div class="text-center mb-1">
         <h5>شكرا لك علي وقتك وثقتك بنا</h5>
       </div>
