--- a/src/app/side-details/side-details.component.html
+++ b/src/app/side-details/side-details.component.html
@@ -885,9 +885,9 @@ selectedOrderType === 'talabat') {
             <div>
               <strong>مبلغ إضافي مطلوب:</strong>
               <span class="fw-bold">{{ finalTipSummary.additionalPaymentRequired
-                | number:'1.2-2' }} ج.م</span>
+                | number:'1.2-2' }} ج.م  لتحقيق الإكرامية المطلوبة </span>
               <br>
-              <small>لتحقيق الإكرامية المطلوبة</small>
+              <!-- <small>  لتحقيق الإكرامية المطلوبة  </small> -->
             </div>
           </div>
         </div>
