--- a/src/app/side-details/side-details.component.html
+++ b/src/app/side-details/side-details.component.html
@@ -1531,7 +1531,7 @@ selectedOrderType === 'talabat') {
       <div class="modal-header border-0">
         <button type="button" class="btn-close" data-bs-dismiss="modal"
           aria-label="Close"
-          (click)="closeModal()"></button>
+          (click)="closeClientModal()"></button>
       </div>
 
       <div class="modal-body">
