--- a/src/app/side-details/side-details.component.html
+++ b/src/app/side-details/side-details.component.html
@@ -1725,7 +1725,7 @@ selectedOrderType === 'talabat') {
       (click)="confirmTipAndClose(modal)">
       <span class="fw-bold">تكملة الدفع</span>
       <br>
-      <small class="fw-normal">
+      <small class="fw-normal" style="color: #fff;">
         (المتبقي للرد: {{
         selectedTipType === 'no_tip' ? tempChangeAmount :
         selectedTipType === 'tip_the_change' ? 0 :
