--- a/src/app/pill-edit/pill-edit.component.html
+++ b/src/app/pill-edit/pill-edit.component.html
@@ -176,8 +176,14 @@
                   <h6 class="text-muted mx-5 fw-medium"
                     *ngIf="item?.addons?.length>0"> الاضافات :
                     <span *ngFor="let addon of item?.addons; let last = last">
-                      <span>{{ addon?.addon_name }}<span *ngIf="!last">،
-                        </span></span>
+                      <!-- <span>{{ addon?.addon_name }}<span *ngIf="!last">،
+                        </span></span> -->
+                        @if (!isOnline) {
+                          <span>{{ addon.name }}<span *ngIf="!last">، </span></span>
+                        }
+                        @else {
+                          <span>{{ addon.addon_name }}<span *ngIf="!last">، </span></span>
+                        }
                     </span>
 
                   </h6>
@@ -712,7 +718,7 @@
             عنوان التوصيل:
             <span>{{ addressDetails?.[0]?.client_address ?? 'لا يوجد' }}</span>
           </h6>
-       
+
             <h6 style="font-size: 10px;">
           اسم الطيار:
           <span>{{ invoices?.[0]?.delivery_name && invoices[0].delivery_name.trim() !== '' ? invoices[0].delivery_name :
@@ -720,7 +726,7 @@
         </h6>
         </div>
 
-      
+
    <h6 style="font-size: 10px;" class="bg_black">
             تعليمات التوصيل:
             <span>{{ addressDetails?.[0]?.address_notes ?? 'لا يوجد' }}</span>
@@ -1068,4 +1074,4 @@
   [rejectLabel]="'لا'"></app-confirm-dialog>
 
 
-  
+
