--- a/src/app/pill-edit/pill-edit.component.html
+++ b/src/app/pill-edit/pill-edit.component.html
@@ -572,7 +572,7 @@
 
     <!-- dalia start -->
     <!-- قسم التيبس -->
-    <div class="tips-section" *ngIf="invoiceTips.length > 0">
+    <div class="tips-section" *ngIf="invoiceTips.length > 0 && paymentStatus == 'paid'">
       <hr />
       <div *ngFor="let tip of invoiceTips" class="mb-3">
         <div class="d-flex justify-content-between px-2 mb-1">
