--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -195,11 +195,11 @@
         <span>{{ orderSummary.service_fees }} {{ currencySymbol }}</span>
       </h6>
     </div>
-    <div class="px-2 mb-1" *ngIf="!orderSummary.tax_application">
+    <div class="px-2 mb-1" *ngIf="orderSummary.tax_application === true">
       <h6>سعر الوجبات يشتمل على ضريبة القيمة المضافة</h6>
     </div>
 
-    <div class="px-2 mb-1" *ngIf="orderSummary.tax_application">
+    <div class="px-2 mb-1" *ngIf="orderSummary.tax_application === false">
       <h6>
         تضاف ضريبة القيمة المضافة
         <span class="main-color">بنسبة {{ orderSummary.tax_percentage }}% </span> بمعنى اخر
