--- a/src/app/side-details/side-details.component.html
+++ b/src/app/side-details/side-details.component.html
@@ -742,16 +742,14 @@ selectedOrderType === 'talabat') {
                     [class.is-invalid]="paymentError">
 
                   <!-- عرض رسالة الخطأ -->
-                  @if (paymentError) {
+                  <!-- @if (paymentError) {
                   <div class="alert alert-warning mt-2 py-2">
                     <i class="fas fa-exclamation-circle me-1"></i>
                     {{ paymentError }}
                   </div>
-                  }
-                  <div *ngIf="amountError" class="invalid-feedback d-block">
-                    {{ falseMessage }}
-                  </div>
-                  {{ falseMessage }}
+                  } -->
+                 
+                  <!-- {{ falseMessage }} -->
                   <small class="text-muted">
                     المبلغ المطلوب: {{ getCartTotal() | number:'1.2-2' }} {{
                     currencySymbol }}
@@ -964,7 +962,8 @@ selectedOrderType === 'talabat') {
 
       @if (trueMessage) {
       <p class="message">{{ trueMessage }}</p>
-      } @if (falseMessage && falseMessage !== "order.amount_wrong") {
+      } 
+      @if (falseMessage && falseMessage !== "order.amount_wrong") {
       <div class="alert alert-danger text-center" role="alert">
         {{falseMessage}}
       </div>
@@ -1662,44 +1661,42 @@ selectedOrderType === 'talabat') {
         <!-- صبلغ محدد -->
         <div class="col-4">
           <div class="tip-option-horizontal text-center"
-            [class.active-tip-horizontal]="selectedTipType === 'tip_specific_amount' && tempChangeAmount > 0"
+            [class.active-tip-horizontal]="selectedTipType === 'tip_specific_amount' "
             [class.disabled-tip-horizontal]="tempChangeAmount <= 0"
-            (click)="tempChangeAmount > 0 ? selectTipOption('tip_specific_amount') : null">
+            (click)="selectTipOption('tip_specific_amount')">
             <div class="option-radio">
               <div class="radio-dot"
-                [class.radio-dot-active]="selectedTipType === 'tip_specific_amount' && tempChangeAmount > 0"
+                [class.radio-dot-active]="selectedTipType === 'tip_specific_amount' "
                 [class.radio-dot-disabled]="tempChangeAmount <= 0"></div>
             </div>
             <div class="option-title fw-bold">مبلغ محدد</div>
-            <small *ngIf="tempChangeAmount <= 0" class="text-danger">غير متاح</small>
           </div>
         </div>
 
         <!-- الصبلغ كله -->
         <div class="col-4">
           <div class="tip-option-horizontal text-center"
-            [class.active-tip-horizontal]="selectedTipType === 'tip_the_change' && tempChangeAmount > 0"
+            [class.active-tip-horizontal]="selectedTipType === 'tip_the_change'"
             [class.disabled-tip-horizontal]="tempChangeAmount <= 0"
-            (click)="tempChangeAmount > 0 ? selectTipOption('tip_the_change') : null">
+            (click)="selectTipOption('tip_the_change')">
             <div class="option-radio">
               <div class="radio-dot"
-                [class.radio-dot-active]="selectedTipType === 'tip_the_change' && tempChangeAmount > 0"
+                [class.radio-dot-active]="selectedTipType === 'tip_the_change'"
                 [class.radio-dot-disabled]="tempChangeAmount <= 0"></div>
             </div>
             <div class="option-title fw-bold">المبلغ كله</div>
-             <small *ngIf="tempChangeAmount <= 0" class="text-danger">غير متاح</small>
           </div>
         </div>
       </div>
     </div>
 
     <!-- حقل إدخال المبلغ المحدد -->
-    @if(selectedTipType === 'tip_specific_amount' && tempChangeAmount > 0) {
+    @if(selectedTipType === 'tip_specific_amount' ) {
     <div class="tip-input-section mb-4 text-center">
       <div class="tip-input-large">
         <input type="number" class="form-control form-control-lg text-center"
           [(ngModel)]="specificTipAmount"
-          placeholder="0" min="0" step="0.01">
+          placeholder=" " min="0" step="0.01">
       </div>
     </div>
     }
@@ -1711,7 +1708,7 @@ selectedOrderType === 'talabat') {
         <span class="fw-bolder text-success fs-5">
           {{
           (
-          selectedTipType === 'no_tip' ? 0 :
+          selectedTipType === 'no_tip' ? " " :
           selectedTipType === 'tip_the_change' ? tempChangeAmount :
           specificTipAmount
           ) | number:'1.2-2'
